--- a/.gitignore
+++ b/.gitignore
@@ -109,4 +109,7 @@ buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
 
+#db settings
+*/application.properties
+
 # End of https://www.gitignore.io/api/java,maven,eclipse
