--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,9 @@ local.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+#keystore
+*.jks
+
 ### Maven ###
 target/
 pom.xml.tag
